Added another before-after image

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
         <header>
             <div class="header-center">
-                <h1>Tamer Tapetar</h1>
+                <h1>Tapetar Sarajevo</h1>
             </div>
             <div class="header-nav">
                 <button class="nav-button" onclick="scrollToSection('services')">Usluge</button>
@@ -377,6 +377,21 @@
                     </div>
                     <div class="image-container">
                         <img src="img/Jednosjed_poslije.jpg" alt="Poslije restauracije">
+                    </div>
+                </div>
+                <div class="description">
+                    <h3 class="service-title">Restauracija Antiknog Namještaja</h3>
+                    <p>Posebnu pažnju posvećujemo antiknom namještaju, čuvajući njegovu autentičnost dok istovremeno osiguravamo modernu udobnost i funkcionalnost. Svaki komad tretiramo s posebnom pažnjom i poštovanjem.</p>
+                </div>
+            </div>
+
+            <div class="before-after-container">
+                <div class="before-after">
+                    <div class="image-container">
+                        <img src="img/Fotelja_prije.jpg" alt="Prije restauracije">
+                    </div>
+                    <div class="image-container">
+                        <img src="img/Fotelja_prije.jpg" alt="Poslije restauracije">
                     </div>
                 </div>
                 <div class="description">
